[gd_scene load_steps=33 format=3 uid="uid://csi3yjrxq4qpx"]

[ext_resource type="Script" path="res://SampleProject/Scripts/Stage_elements/orb.gd" id="1_dda8v"]
[ext_resource type="Texture2D" uid="uid://dn57vjry1heot" path="res://assets/sprites/Items/Orbs/CyanOrb.png" id="1_nsugw"]
[ext_resource type="Texture2D" uid="uid://p1t5i4sxhu71" path="res://assets/sprites/Effects/floaty_64.png" id="2_sgnrd"]
[ext_resource type="Script" path="res://SampleProject/Scripts/polyphonic_audio_player.gd" id="3_7j4ii"]
[ext_resource type="Script" path="res://SampleProject/Scripts/AudioLibrary.gd" id="4_m8dki"]
[ext_resource type="Script" path="res://SampleProject/Scripts/soundEffect.gd" id="5_llwci"]
[ext_resource type="AudioStream" uid="uid://wrqweng3ejsu" path="res://assets/sounds/Pickups/SpawnOrb.MP3" id="6_b5jxo"]
[ext_resource type="AudioStream" uid="uid://ekr5fx3fw7fv" path="res://assets/sounds/Pickups/OrbBeat.MP3" id="8_4hymu"]
[ext_resource type="AudioStream" uid="uid://iqp4chg11jpy" path="res://assets/sounds/Pickups/GetOrb.MP3" id="9_vdoiv"]

[sub_resource type="Gradient" id="Gradient_edlvs"]
offsets = PackedFloat32Array(0, 0.368627, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ij8fs"]
gradient = SubResource("Gradient_edlvs")

[sub_resource type="Curve" id="Curve_crqyp"]
max_value = 2.0
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.254417, 2), 0.0, 0.0, 0, 0, Vector2(0.816254, 2), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_q1434"]
curve = SubResource("Curve_crqyp")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_45e0q"]
particle_flag_align_y = true
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 80.0
emission_ring_radius = 80.0
emission_ring_inner_radius = 40.0
gravity = Vector3(0, 0, 0)
radial_accel_min = -200.0
radial_accel_max = -100.0
scale_curve = SubResource("CurveTexture_q1434")
color_ramp = SubResource("GradientTexture1D_ij8fs")

[sub_resource type="Gradient" id="Gradient_1up5j"]
offsets = PackedFloat32Array(0.00348432, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cwiw1"]
gradient = SubResource("Gradient_1up5j")
width = 1
height = 8

[sub_resource type="Animation" id="Animation_46h6s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GPUParticles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GPUParticles2D:amount_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GPUParticles2D:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GPUParticles2D:one_shot")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PointLight2D:energy")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Spawn:emitting")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Glowing:emitting")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Glowing:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Sprite2D:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("PointLight2D:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Area2D:monitoring")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_eyvgk"]
resource_name = "collected"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.466667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.466667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"collecting"
}]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(2.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_3x5nw"]
resource_name = "floating"
length = 2.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Glowing:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PointLight2D:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area2D:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_0xwnf"]
resource_name = "spawn"
length = 8.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GPUParticles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GPUParticles2D:amount_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5.53333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.1, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GPUParticles2D:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 5.53333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 5.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GPUParticles2D:one_shot")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 6.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PointLight2D:energy")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 5.7, 6.06667, 7.16667, 7.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 2.0, 15.0, 2.0, 1.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 5.73333, 6.33333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D:scale")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(6, 6.33333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Spawn:emitting")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Glowing:emitting")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 8.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/9/type = "method"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("PolyphonicAudio")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 8.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": ["spawn"],
"method": &"play_sound_effect_from_library"
}, {
"args": ["beat"],
"method": &"play_sound_effect_from_library"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wbe01"]
_data = {
"RESET": SubResource("Animation_46h6s"),
"collected": SubResource("Animation_eyvgk"),
"floating": SubResource("Animation_3x5nw"),
"spawn": SubResource("Animation_0xwnf")
}

[sub_resource type="Gradient" id="Gradient_j7ose"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pqded"]
gradient = SubResource("Gradient_j7ose")
fill = 1
fill_from = Vector2(0.487179, 0.5)
fill_to = Vector2(0.628205, 0.354701)

[sub_resource type="Environment" id="Environment_lh031"]
background_mode = 3
ambient_light_energy = 4.09
glow_enabled = true
glow_levels/2 = 1.0
glow_levels/4 = 1.0
glow_levels/6 = 1.0
glow_levels/7 = 1.0
glow_blend_mode = 1
fog_mode = 1
fog_density = 1.0
adjustment_enabled = true

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ehhc5"]
blend_mode = 1
light_mode = 1
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 7
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0702b"]
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3(0, -1, 0)
spread = 180.0
initial_velocity_max = 30.0
radial_velocity_min = 200.0
radial_velocity_max = 250.0
gravity = Vector3(0, 0, 0)
anim_speed_min = 1.0
anim_speed_max = 1.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7bsek"]
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3(0, -1, 0)
spread = 180.0
initial_velocity_max = 30.0
radial_velocity_min = 20.0
radial_velocity_max = 50.0
gravity = Vector3(0, 0, 0)
anim_speed_min = 1.0
anim_speed_max = 1.0

[sub_resource type="Resource" id="Resource_gb515"]
script = ExtResource("5_llwci")
Tag = "spawn"
stream = ExtResource("6_b5jxo")

[sub_resource type="Resource" id="Resource_tngw7"]
script = ExtResource("5_llwci")
Tag = "beat"
stream = ExtResource("8_4hymu")

[sub_resource type="Resource" id="Resource_cx47j"]
script = ExtResource("5_llwci")
Tag = "collect"
stream = ExtResource("9_vdoiv")

[sub_resource type="Resource" id="Resource_rhh2m"]
script = ExtResource("4_m8dki")
sound_effects = Array[ExtResource("5_llwci")]([SubResource("Resource_gb515"), SubResource("Resource_tngw7"), SubResource("Resource_cx47j")])

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7s381"]
size = Vector2(21, 53)

[node name="Orb" type="Node2D" node_paths=PackedStringArray("animation", "glowing_particles", "spawn_particles", "orb_sprite", "point_light", "sound", "beat_sound_timer")]
scale = Vector2(2, 2)
script = ExtResource("1_dda8v")
animation = NodePath("AnimationPlayer")
glowing_particles = NodePath("Glowing")
spawn_particles = NodePath("Spawn")
orb_sprite = NodePath("Sprite2D")
point_light = NodePath("PointLight2D")
orb_color = 1
sound = NodePath("PolyphonicAudio")
pickup_flag_id = 28
beat_sound_timer = NodePath("BeatSoundDelay")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
self_modulate = Color(0, 1, 1, 0.772549)
emitting = false
amount = 30
process_material = SubResource("ParticleProcessMaterial_45e0q")
texture = SubResource("GradientTexture2D_cwiw1")
fixed_fps = 60

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wbe01")
}

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(1, 1, 2, 1)
energy = 0.0
texture = SubResource("GradientTexture2D_pqded")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("1_nsugw")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
process_mode = 3
environment = SubResource("Environment_lh031")

[node name="Spawn" type="GPUParticles2D" parent="."]
self_modulate = Color(0, 1, 1, 0.772549)
z_index = 20
material = SubResource("CanvasItemMaterial_ehhc5")
emitting = false
amount = 100
process_material = SubResource("ParticleProcessMaterial_0702b")
texture = ExtResource("2_sgnrd")
lifetime = 1.5
one_shot = true
explosiveness = 0.7
fixed_fps = 60

[node name="Glowing" type="GPUParticles2D" parent="."]
self_modulate = Color(0, 1, 1, 0.772549)
z_index = 20
material = SubResource("CanvasItemMaterial_ehhc5")
emitting = false
amount = 10
process_material = SubResource("ParticleProcessMaterial_7bsek")
texture = ExtResource("2_sgnrd")
lifetime = 2.4
explosiveness = 1.0
fixed_fps = 60

[node name="PolyphonicAudio" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
volume_db = -2.0
script = ExtResource("3_7j4ii")
audio_library = SubResource("Resource_rhh2m")

[node name="BeatSoundDelay" type="Timer" parent="."]
wait_time = 2.4

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(0.5, 0.5)
collision_layer = 0
collision_mask = 2
monitoring = false

[node name="CollisionBox" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, -7.5)
shape = SubResource("RectangleShape2D_7s381")

[connection signal="timeout" from="BeatSoundDelay" to="." method="_on_beat_sound_delay_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
